@@ -20,7 +20,7 @@
  * CDDL HEADER END
  */
 /*
- * Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+ * Copyright 2005, 2011 Oracle, Inc.  All rights reserved.
  * Use is subject to license terms.
  */
 
