@@ -1,0 +1,11 @@
+                   FUNCTION:NAME
+                      read:entry read(3, {ptr},  832)
+                     read:return 		 = 
+
+                     write:entry write(3, {ptr},    1)
+                    write:return 		 = 
+
+
+
+-- @@stderr --
+dtrace: script 'test/intro/trussrw.d' matched 4 probes
