@@ -1,0 +1,2 @@
+#!/bin/sed -f
+/=/{s/[0-9]*//g}
