@@ -32,7 +32,7 @@
 #include <fcntl.h>
 #include <sys/mman.h>
 
-#define FILEPATH "/tmp/temp"
+#define FILEPATH "/tmp/mmaptmp"
 #define NUMINTS  (1000)
 #define FILESIZE (NUMINTS * sizeof(int))
 
@@ -40,45 +40,34 @@ int main(int argc, char *argv[])
 {
     int i;
     int fd;
-    int result;
     int *map;
-    struct stat st;
 
     fd = open(FILEPATH, O_RDWR | O_CREAT | O_TRUNC, (mode_t)0600);
     if (fd == -1) {
-	perror("Error opening file for writing");
-	exit(EXIT_FAILURE);
+	exit(1);
     }
 
-    result = lseek(fd, FILESIZE-1, SEEK_SET);
-    if (result == -1) {
+    if (lseek(fd, FILESIZE-1, SEEK_SET) == -1) {
 	close(fd);
-	perror("Error calling lseek() to 'stretch' the file");
-	exit(EXIT_FAILURE);
+	exit(1);
     }
     
-    result = write(fd, "", 1);
-    if (result != 1) {
+    if (write(fd, "", 1) == -1) {
 	close(fd);
-	perror("Error writing last byte of the file");
-	exit(EXIT_FAILURE);
+	exit(1);
     }
 
     map = mmap(0, FILESIZE, PROT_READ | PROT_WRITE, MAP_SHARED, fd, 0);
     if (map == MAP_FAILED) {
 	close(fd);
-	perror("Error mmapping the file");
-	exit(EXIT_FAILURE);
+	exit(1);
     }
     
     for (i = 1; i <=NUMINTS; ++i) {
-	map[i] = 2 * i; 
+	map[i] = i; 
     }
 
-    if (munmap(map, FILESIZE) == -1) {
-	perror("Error un-mmapping the file");
-    }
-
+    munmap(map, FILESIZE);
     close(fd);
     return 0;
 }
